--- a/configuration.json
+++ b/configuration.json
@@ -1,10 +1,6 @@
 [
 {
-"id" : "nhl playoff",
-"url": "https://www.leon.ru/betoffer/10000004/10560"
-},
-{
-"id" : "iihf wc",
-"url": "https://www.leon.ru/betoffer/10000004/1982"
+"id" : "khl regular",
+"url": "https://www.leon.ru/betoffer/10000004/673"
 }
 ]
